feat: Implement Step 8 (In-Memory Search)